style(): fix text alignment

--- a/client/scss/_main.scss
+++ b/client/scss/_main.scss
@@ -111,5 +111,6 @@
     left: 2px;
     top: 297px;
     width: 98%;
+    text-align: center;
   }
 }
